[package]
name = "execution_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3"
solana-sdk = "1.18.12" # Adjust version as needed
wasmtime = "17.0.0"    # Adjust version as needed
tokio = { version = "1", features = ["full"] } # "full" includes macros, rt-multi-thread, etc.
anyhow = "1.0"
wat = "1.0" # For wat::parse_str used in your main.rs